[package]
name = "cloudinary-metadata-printer"
version = "0.1.0"
authors = ["Sam Tran <sam.tran@nbcuni.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.22.3"
imageproc = "0.19.2"
wasm-bindgen = "0.2.55"
serde = "1.0.102"
serde_json = "1.0.41"
byteorder = "1.3.2"
rusttype = "0.8.1"
